# wxwidgets_cmake_media_test

./: CMakeLists.txt
src/: CMakeLists.txt  Ids.hpp  main.cpp  wxMediaPlayerApp.cpp  wxMediaPlayerApp.hpp  wxMediaPlayerFrame.cpp  wxMediaPlayerFrame.hpp  wxMediaPlayerListCtrl.cpp  wxMediaPlayerListCtrl.hpp  wxMediaPlayerNotebookPage.cpp  wxMediaPlayerNotebookPage.hpp  wxMediaPlayerTimer.cpp  wxMediaPlayerTimer.hpp  wxPlayListDropTarget.cpp  wxPlayListDropTarget.hpp
